--- a/.github/workflows/account_update.yml
+++ b/.github/workflows/account_update.yml
@@ -1,6 +1,9 @@
 name: Update Account
 on:
   workflow_dispatch:
+  schedule:
+    # 每天 UTC 时间的 00:00 触发
+    - cron: "0 0 * * *"
 
 jobs:
   update-accounts:
